# mid-term

./: CMakeLists.txt  README.md  SoA.h  create_dataset.py  main.cpp  plot.py  plot_execution_times.py
include/: SoA.h  Utility.h
